Thu, 27 Mar 2008 11:28:31 +0100 <thp@perli.net>
Fix problem with pickle when there is a feed parsing exception

	* src/gpodder/cache.py: When the feedparser returns an exception, this
	will be stored as object in bozo_exception. Convert this to a string,
	so the pickle module doesn't complain; thanks to VladDrac in #python
	on FreeNode for pointing me to the right direction to fix this bug

Mon, 24 Mar 2008 10:42:19 +0100 <thp@perli.net>
Add "3gp" to the list of video file extensions, so we detect these files

	* src/gpodder/util.py: Add the .3gp video file extension to the list
	of known video file extensions, so we can detect that these are video
	files and act accordingly (in the UI and on sync); thanks to Atte
	André Jensen for reporting this bug on the gpodder-devel mailing list

Sun, 23 Mar 2008 10:39:24 +0100 <thp@perli.net>
Fix a bug when loading invalid image data (delete cover file then)

	* src/gpodder/libgpodder.py: Fix a bug when gPodder is unable to load
	an invalid cover image (i.e. when dragging a linked image from the
	browser to the gPodder window, the link is sent, not the image)

Sat, 22 Mar 2008 21:08:06 +0100 <thp@perli.net>
Make bluetooth device discover a bit nicer

	* src/gpodder/gui.py: Improve bluetooth device discovery button by not
	destroying its design when it has been clicked and the label is
	modified

Sat, 22 Mar 2008 20:45:27 +0100 <thp@perli.net>
Revert previous insanity (where I selected an awful "Transfer" toolbar icon)

	* data/gpodder.glade: I wonder why I selected "gtk-network" as the
	icon for the "Transfer" button on gPodder's toolbar. It surely is
	irritating and illogical as hell.. Hmm. Anyway - now, there is a nice
	"multimedia-player" icon which probably depicts an iPod-like device
	if you use a good icon set. This makes much more sense. Go usability!

Sat, 22 Mar 2008 20:41:54 +0100 <thp@perli.net>
Add "Visit website" menu items to channel and episode list; simple chan menu
